removed tmux right ssh session, didnt worked

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -109,7 +109,13 @@ bind b list-buffers  # list paste buffers
 bind p paste-buffer  # paste from the top paste buffer
 bind P choose-buffer # choose which buffer to paste from
 
-# status bar
+# -- external scripts for ssh awareness ----------------------------------------
+
+#run-shell ~/.config/tmux/current_pane_hostname.tmux
+
+
+# -- status bar ----------------------------------------------------------------
+
 set-window-option -g window-status-format ""
 set-window-option -g window-status-current-format ""
 
@@ -136,5 +142,5 @@ set -ga status-left " #[fg=white]#(echo $DEFAULT_GW) (#(ping -c1 $DEFAULT_GW | g
 
 set -g status-right-length 60
 set -g status-right "#[fg=yellow]%d %b %Y #[fg=green]%H:%M"
-#set -ga status-right " #[fg=red]#(tmux show-environment | grep ^SSH_CONNECTION= | cut -d= -f2 | cut -d" " -f1 )"
+# set -g status-right '#[fg=cyan,bold] #U @#H #[default]#[fg=blue]#(tmux display-message -p "#{pane_current_path}" | sed "s#$HOME#~#g") #[fg=red]%H:%M %d-%b-%y#[default]'
 #set -ga status-right " #[fg=red]#(echo ${SSH_CONNECTION})"
