--- a/.tmux.conf
+++ b/.tmux.conf
@@ -109,11 +109,6 @@ bind b list-buffers  # list paste buffers
 bind p paste-buffer  # paste from the top paste buffer
 bind P choose-buffer # choose which buffer to paste from
 
-# -- external scripts for ssh awareness ----------------------------------------
-
-#run-shell ~/.config/tmux/current_pane_hostname.tmux
-
-
 # -- status bar ----------------------------------------------------------------
 
 set-window-option -g window-status-format ""
@@ -140,7 +135,11 @@ set -ga status-left " #[fg=red]#(echo $VPN1_ADDR)"
 set -ga status-left " #[fg=white]8.8.8.8 (#(ping -c1 8.8.8.8 | grep ttl | cut -f4 -d'='))"
 set -ga status-left " #[fg=white]#(echo $DEFAULT_GW) (#(ping -c1 $DEFAULT_GW | grep ttl | cut -f4 -d'='))"
 
-set -g status-right-length 60
-set -g status-right "#[fg=yellow]%d %b %Y #[fg=green]%H:%M"
-# set -g status-right '#[fg=cyan,bold] #U @#H #[default]#[fg=blue]#(tmux display-message -p "#{pane_current_path}" | sed "s#$HOME#~#g") #[fg=red]%H:%M %d-%b-%y#[default]'
-#set -ga status-right " #[fg=red]#(echo ${SSH_CONNECTION})"
+# show user info on right side of status bar
+
+set -g status-right-length 80
+set -g status-right "#[fg=yellow]%d %b %Y"
+set -ga status-right " #[fg=green]%H:%M"
+set -ga status-right ' #[fg=red]#(~/.config/tmux/ssh-utils.sh _username #{pane_tty} false #D)'
+set -ga status-right ' #[fg=red]#(~/.config/tmux/ssh-utils.sh _root #{pane_tty} !)'
+set -ga status-right ' #[fg=blue]#(~/.config/tmux/ssh-utils.sh _hostname #{pane_tty} false #h #D)'
