added support for VPN IP interface with tun0 and tun1

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -123,8 +123,8 @@ set-option -g status-fg yellow #yellow
 set -g status-left-length 120
 
 IP_ADDR="$(ifconfig eth0 | grep 'inet ' | awk '{print \"lan \" $2}')"
-VPN0_ADDR="$(ifconfig utun0 | grep 'inet ' | awk '{print \"vpn \" $2}')"
-VPN1_ADDR="$(ifconfig utun1 | grep 'inet ' | awk '{print \"vpn \" $2}')"
+VPN0_ADDR="$(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}')"
+VPN1_ADDR="$(ifconfig tun1 | grep 'inet ' | awk '{print \"vpn \" $2}')"
 DEFAULT_GW="$(ip route show | grep default | cut -d' ' -f 3)"
 
 set -g status-left "#[fg=green][#P]"
