--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,6 +58,9 @@ bind -r J resize-pane -D 2
 bind -r K resize-pane -U 2
 bind -r L resize-pane -R 5
 
+bind b select-pane -P 'bg=#000000'
+bind B select-pane -P 'bg=default'
+
 # window navigation
 unbind n
 unbind p
@@ -105,7 +108,7 @@ if -b '[ -c /dev/clipboard ]' 'bind y run -b "tmux save-buffer - > /dev/clipboar
 
 # -- buffers -------------------------------------------------------------------
 
-bind b list-buffers  # list paste buffers
+# bind b list-buffers  # list paste buffers
 bind p paste-buffer  # paste from the top paste buffer
 bind P choose-buffer # choose which buffer to paste from
 
@@ -119,6 +122,8 @@ set-option -g status-bg colour235 #base02
 set-option -g status-fg yellow #yellow
 #set-option -g status-attr dim
 
+
+
 # show IP addresses on left side of status bar
 set -g status-left-length 120
 
@@ -126,6 +131,8 @@ IP_ADDR="$(ifconfig eth0 | grep 'inet ' | awk '{print \"lan \" $2}')"
 VPN0_ADDR="$(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}')"
 VPN1_ADDR="$(ifconfig tun1 | grep 'inet ' | awk '{print \"vpn \" $2}')"
 DEFAULT_GW="$(ip route show | grep default | cut -d' ' -f 3)"
+
+UPTIME="$(uptime | awk '{print $3}'|sed 's/,//')"
 
 set -g status-left "#[fg=green][#P]"
 set -ga status-left " #[fg=brightblue]#(curl icanhazip.com)"
@@ -143,3 +150,4 @@ set -ga status-right " #[fg=green]%H:%M"
 set -ga status-right ' #[fg=red]#(~/.config/tmux/ssh-utils.sh _username #{pane_tty} false #D)'
 set -ga status-right ' #[fg=red]#(~/.config/tmux/ssh-utils.sh _root #{pane_tty} !)'
 set -ga status-right ' #[fg=blue]#(~/.config/tmux/ssh-utils.sh _hostname #{pane_tty} false #h #D)'
+set -ga status-right " #[fg=white]#(echo $UPTIME)UT"
