--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,11 +1,19 @@
 # Configuration for Alacritty, the GPU enhanced terminal emulator.
-#env:
-#  TERM: alacritty
-# Window configuration
+
+# Import additional configuration files
+import:
+  - C:\Users\user\AppData\Roaming\alacritty\schemes.yml
+
+# Any items in the `env` entry below will be added as
+# environment variables. Some entries may override variables
+# set by alacritty itself.
+env:
+  TERM: alacritty
+
 window:
   dimensions:
-    columns: 170
-    lines: 41
+    columns: 235
+    lines: 59
   position:
     x: 10
     y: 10
@@ -14,7 +22,7 @@ window:
     y: 10
   dynamic_padding: false
   decorations: none
-  startup_mode: Windowed # Windowed | Maximized | Fullscreen
+  startup_mode: Windowed
   title: Alacritty
   dynamic_title: false
 
@@ -23,135 +31,77 @@ scrolling:
   multiplier: 3
 
 # Font configuration
-font:
-  normal:
-    family: Fira Code
-    style: Regular
-  bold:
-    family: Fira Code
-    style: Bold
-  italic:
-    family: Fira Code
-    style: Italic
-  bold_italic:
-    family: Fira Code
-    style: Bold Italic
-  size: 11.0
-  offset:
-    x: 0
-    y: 0
-  glyph_offset:
-    x: 0
-    y: 0
-
-draw_bold_text_with_bright_colors: true
-
-# Colors (Tomorrow Night)
-colors:
-  # Default colors
-  primary:
-    background: '#1d1f21' # 1d1f21 282828
-    foreground: '#c5c8c6' # c5c8c6 ebdbb2
-    # hard contrast: background = '#1d2021'
-    # soft contrast: background = '#32302f'
-
-    # Bright and dim foreground colors
+#font:
+  # Normal (roman) font face
+  #normal:
+    # Font family
     #
-    # The dimmed foreground color is calculated automatically if it is not present.
-    # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
-    # is `false`, the normal foreground color will be used.
-    #dim_foreground: '#828482'
-    #bright_foreground: '#eaeaea'
+    # Default:
+    #   - (macOS) Menlo
+    #   - (Linux/BSD) monospace
+    #   - (Windows) Consolas
+    #family: monospace
 
-  # Cursor colors
-  #
-  # Colors which should be used to draw the terminal cursor.
-  #
-  # Allowed values are CellForeground and CellBackground, which reference the
-  # affected cell, or hexadecimal colors like #ff00ff.
-  #cursor:
-  #  text: CellBackground
-  #  cursor: CellForeground
+    # The `style` can be specified to pick a specific face.
+    #style: Regular
 
-  # Vi mode cursor colors
-  #
-  # Colors for the cursor when the vi mode is active.
-  #
-  # Allowed values are CellForeground and CellBackground, which reference the
-  # affected cell, or hexadecimal colors like #ff00ff.
-  #vi_mode_cursor:
-  #  text: CellBackground
-  #  cursor: CellForeground
+  # Bold font face
+  #bold:
+    # Font family
+    #
+    # If the bold family is not specified, it will fall back to the
+    # value specified for the normal font.
+    #family: monospace
 
-  # Selection colors
-  #
-  # Colors which should be used to draw the selection area.
-  #
-  # Allowed values are CellForeground and CellBackground, which reference the
-  # affected cell, or hexadecimal colors like #ff00ff.
-  #selection:
-  #  text: CellBackground
-  #  background: CellForeground
+    # The `style` can be specified to pick a specific face.
+    #style: Bold
 
-  # Search colors
-  #
-  # Colors used for the search bar and match highlighting.
-  #search:
-    # Allowed values are CellForeground and CellBackground, which reference the
-    # affected cell, or hexadecimal colors like #ff00ff.
-    #matches:
-    #  foreground: '#000000'
-    #  background: '#ffffff'
+  # Italic font face
+  #italic:
+    # Font family
+    #
+    # If the italic family is not specified, it will fall back to the
+    # value specified for the normal font.
+    #family: monospace
 
-    #bar:
-    #  background: '#c5c8c6'
-    #  foreground: '#1d1f21'
+    # The `style` can be specified to pick a specific face.
+    #style: Italic
 
-  # Normal colors
-  normal:
-    black:   '#1d1f21'
-    red:     '#cc6666'
-    green:   '#b5bd68'
-    yellow:  '#f0c674'
-    blue:    '#81a2be'
-    magenta: '#b294bb'
-    cyan:    '#8abeb7'
-    white:   '#c5c8c6'
+  # Bold italic font face
+  #bold_italic:
+    # Font family
+    #
+    # If the bold italic family is not specified, it will fall back to the
+    # value specified for the normal font.
+    #family: monospace
 
-  # Bright colors
-  bright:
-    black:   '#666666'
-    red:     '#d54e53'
-    green:   '#b9ca4a'
-    yellow:  '#e7c547'
-    blue:    '#7aa6da'
-    magenta: '#c397d8'
-    cyan:    '#70c0b1'
-    white:   '#eaeaea'
+    # The `style` can be specified to pick a specific face.
+    #style: Bold Italic
 
-  # Dim colors
-  #
-  # If the dim colors are not set, they will be calculated automatically based
-  # on the `normal` colors.
-  #dim:
-  #  black:   '#131415'
-  #  red:     '#864343'
-  #  green:   '#777c44'
-  #  yellow:  '#9e824c'
-  #  blue:    '#556a7d'
-  #  magenta: '#75617b'
-  #  cyan:    '#5b7d78'
-  #  white:   '#828482'
+  # Point size
+  #size: 11.0
 
-  # Indexed Colors
+  # Offset is the extra space around each character. `offset.y` can be thought of
+  # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
+  #offset:
+  #  x: 0
+  #  y: 0
+
+  # Glyph offset determines the locations of the glyphs within their cells with
+  # the default being at the bottom. Increasing `x` moves the glyph to the right,
+  # increasing `y` moves the glyph upward.
+  #glyph_offset:
+  #  x: 0
+  #  y: 0
+
+  # Thin stroke font rendering (macOS only)
   #
-  # The indexed colors include all colors from 16 to 256.
-  # When these are not set, they're filled with sensible defaults.
-  #
-  # Example:
-  #   `- { index: 16, color: '#ff00ff' }`
-  #
-  #indexed_colors: []
+  # Thin strokes are suitable for retina displays, but for non-retina screens
+  # it is recommended to set `use_thin_strokes` to `false`.
+  #use_thin_strokes: true
+
+draw_bold_text_with_bright_colors: false
+
 
 # Bell
 #
@@ -194,14 +144,21 @@ colors:
   #
   #command: None
 
+# Background opacity
+#
+# Window opacity as a floating point number from `0.0` to `1.0`.
+# The value `0.0` is completely transparent and `1.0` is opaque.
 background_opacity: 0.95
 
-selection:
-  semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
-  save_to_clipboard: false
+#selection:
+  # This string contains all characters that are used as separators for "semantic words" in Alacritty.
+  #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
+
+  # When set to `true`, selected text will be copied to the primary clipboard.
+  #save_to_clipboard: false
 
 cursor:
-  style: Block # ▇ Block   | Beam   _ Underline
+  style: Block
   vi_mode_style: None
   unfocused_hollow: true
   thickness: 0.15
@@ -214,22 +171,74 @@ shell:
   args:
     - wsl
     - tmux
+#    - kali
 
-working_directory: //wsl$/Ubuntu/home/jmacazana/
-
+working_directory: //wsl$/Ubuntu-20.04/home/jmacazana/
+#working_directory: //wsl$/kali-linux/home/jmacazana/
 winpty_backend: false
 
 # Send ESC (\x1b) before characters when alt is pressed.
 #alt_send_esc: true
 
-mouse:
-  double_click: { threshold: 300 }
-  triple_click: { threshold: 300 }
-  hide_when_typing: false
+#mouse:
+  # Click settings
+  #
+  # The `double_click` and `triple_click` settings control the time
+  # alacritty should wait for accepting multiple clicks as one double
+  # or triple click.
+  #double_click: { threshold: 300 }
+  #triple_click: { threshold: 300 }
 
+  # If this is `true`, the cursor is temporarily hidden when typing.
+  #hide_when_typing: false
+
+  #url:
+    # URL launcher
+    #
+    # This program is executed when clicking on a text which is recognized as a URL.
+    # The URL is always added to the command as the last parameter.
+    #
+    # When set to `launcher: None`, URL launching will be disabled completely.
+    #
+    # Default:
+    #   - (macOS) open
+    #   - (Linux/BSD) xdg-open
+    #   - (Windows) explorer
+    #launcher:
+    #  program: xdg-open
+    #  args: []
+
+    # URL modifiers
+    #
+    # These are the modifiers that need to be held down for opening URLs when clicking
+    # on them. The available modifiers are documented in the key binding section.
+    #modifiers: None
+
+# Mouse bindings
+#
+# Mouse bindings are specified as a list of objects, much like the key
+# bindings further below.
+#
+# To trigger mouse bindings when an application running within Alacritty captures the mouse, the
+# `Shift` modifier is automatically added as a requirement.
+#
+# Each mouse binding will specify a:
+#
+# - `mouse`:
+#
+#   - Middle
+#   - Left
+#   - Right
+#   - Numeric identifier such as `5`
+#
+# - `action` (see key bindings)
+#
+# And optionally:
+#
+# - `mods` (see key bindings)
 mouse_bindings:
-  - { mouse: Right, action: Copy }
   - { mouse: Middle, action: PasteSelection }
+  - { mouse: Right, action: Copy }
 
 # Key bindings
 #
@@ -412,26 +421,7 @@ mouse_bindings:
 #
 # If the same trigger is assigned to multiple actions, all of them are executed
 # in the order they were defined in.
-key_bindings:
-  - { key: V,      mods: Control,       action: Paste    } # terminal up
-  - { key: J,      mods: Control,       chars: "\x02\x6A"} # terminal up
-  - { key: K,      mods: Control,       chars: "\x02\x6F"} # terminal down
-  - { key: H,      mods: Alt,           chars: "\x02\x48"} # resize left
-  - { key: J,      mods: Alt,           chars: "\x02\x4A"} # resize down
-  - { key: K,      mods: Alt,           chars: "\x02\x4B"} # resize up
-  - { key: L,      mods: Alt,           chars: "\x02\x4C"} # resize right
-  - { key: M,      mods: Control,       chars: "\x02\x7A"} # maximize terminal
-  - { key: X,      mods: Alt,           chars: "\x02\x6B"} # kill terminal
-  - { key: R,      mods: Alt,           chars: "\x02\x72"} # reload divisions
-  - { key: R,      mods: Control|Shift, chars: "\x02\x52"} # apply tmux config
-  - { key: Return, mods: Control|Shift, chars: "\x02\x76"} # create new primary terminal
-  - { key: Return, mods: Control,       chars: "\x02\x78"} # set terminal to primary
-  - { key: Space,  mods: Control,       chars: "\x02\x63"} # mode: copy paste
-  - { key: B,      mods: Alt,           chars: "\x02\x62"} # pane background to black
-  - { key: B,      mods: Alt|Shift,     chars: "\x02\x42"} # pane background to default
-  #- { key: Space,  mods: Control|Shift, chars: "\x02\x20"} # create new primary terminal
-
-
+#key_bindings:
   #- { key: Paste,                                action: Paste          }
   #- { key: Copy,                                 action: Copy           }
   #- { key: L,         mods: Control,             action: ClearLogNotice }
@@ -525,6 +515,24 @@ key_bindings:
   #- { key: F,      mods: Command,            action: SearchForward    }
   #- { key: B,      mods: Command,            action: SearchBackward   }
 
+key_bindings:
+  - { key: V,      mods: Control,       action: Paste    } # terminal up
+  - { key: J,      mods: Control,       chars: "\x02\x6A"} # terminal up
+  - { key: K,      mods: Control,       chars: "\x02\x6F"} # terminal down
+  - { key: H,      mods: Alt,           chars: "\x02\x48"} # resize left
+  - { key: J,      mods: Alt,           chars: "\x02\x4A"} # resize down
+  - { key: K,      mods: Alt,           chars: "\x02\x4B"} # resize up
+  - { key: L,      mods: Alt,           chars: "\x02\x4C"} # resize right
+  - { key: M,      mods: Control,       chars: "\x02\x7A"} # maximize terminal
+  - { key: X,      mods: Alt,           chars: "\x02\x6B"} # kill terminal
+  - { key: R,      mods: Alt,           chars: "\x02\x72"} # reload divisions
+  - { key: R,      mods: Control|Shift, chars: "\x02\x52"} # apply tmux config
+  - { key: Return, mods: Control|Shift, chars: "\x02\x76"} # create new primary terminal
+  - { key: Return, mods: Control,       chars: "\x02\x78"} # set terminal to primary
+  - { key: Space,  mods: Control,       chars: "\x02\x63"} # mode: copy paste
+  - { key: B,      mods: Alt,           chars: "\x02\x62"} # pane background to black
+  - { key: B,      mods: Alt|Shift,     chars: "\x02\x42"} # pane background to default
+  
 #debug:
   # Display the time it takes to redraw each frame.
   #render_timer: false
