--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-# custom configs
+#  -- custom configs -----------------------------------------------------------
 setw -g main-pane-width 200
 setw -g aggressive-resize off
 setw -g mode-keys vi
@@ -6,18 +6,19 @@ setw -g mode-keys vi
 # -- general -------------------------------------------------------------------
 
 #set -g default-terminal "alacritty"
+set -g default-terminal "xterm-256color"
 set -g assume-paste-time 0
+set -g repeat-time 0
 set -g history-limit 10000		# boost history
 set -s escape-time 0			# faster command sequences
 set -g status on
 set -g pane-border-format "#P: #{pane_current_command}"
 setw -g mouse on
 
-
 # -- display -------------------------------------------------------------------
 
-set -g base-index 1		# start windows numbering at 1
-setw -g pane-base-index 1	# make pane numbering consistent with windows
+set -g base-index 1		      # start windows numbering at 1
+setw -g pane-base-index 1	  # make pane numbering consistent with windows
 
 setw -g automatic-rename on   # rename window to reflect current program
 set -g renumber-windows on    # renumber windows when a window is closed
@@ -29,58 +30,64 @@ set -g display-time 1000      # slightly longer status messages display time
 
 set -g status-interval 10     # redraw status line every 10 seconds
 
-# clear both screen and history
-#bind -n C-l send-keys C-l \; run 'sleep 0.1' \; clear-history
-
-# activity
 set -g monitor-activity on
 set -g visual-activity off
 
 # -- navigation ----------------------------------------------------------------
 
-# split current window horizontally
-bind - split-window -v
-# split current window vertically
-bind _ split-window -h
+bind - split-window -v # split horizontally
+bind _ split-window -h # split vertically
 
 
 # -- custom bindings -----------------------------------------------------------
 
-# create session
-bind C-c new-session
+unbind C-b
+set-option -g prefix C-t
 
-# find session
+# sessions
+bind C new-session
 bind C-f command-prompt -p find-session 'switch-client -t %%'
+
+# window navigation
+bind Tab last-window        # move to last active window
+bind -r C-h previous-window # select previous window
+bind -r C-l next-window     # select next window
+bind -n C-S-Left swap-window -t -1 \; previous-window
+bind -n C-S-Right swap-window -t +1 \; next-window
 
 # pane resizing
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 2
 bind -r K resize-pane -U 2
 bind -r L resize-pane -R 5
+#bind -r C-k resize-pane -U 2
+#bind -r C-j resize-pane -D 2
+#bind -r C-h resize-pane -L 5
+#bind -r C-l resize-pane -R 5
 
+# vim-like pane switching
+bind -r j select-pane -t :.-
+bind -r k select-pane -t :.+
+
+# change theme for current pane
 bind b select-pane -P 'bg=#000000'
 bind B select-pane -P 'bg=default'
 
-# window navigation
-unbind n
-unbind p
-bind -r C-h previous-window # select previous window
-bind -r C-l next-window     # select next window
-bind Tab last-window        # move to last active window
+# open current dir
+bind o run-shell "explorer.exe `wslpath -w #{pane_current_path}` || true"
 
-#bind-key H resize-pane -L 5
-#bind-key L resize-pane -R 5
-bind j select-pane -t :.-
+# customs
 bind x swap-pane -t :.1 \; select-pane -t :.1
-bind k kill-pane \; select-layout main-vertical
+bind e kill-pane \; select-layout main-vertical
 bind v split-window -v \; select-layout main-vertical \; swap-pane -t :.1 \; select-pane -t :.1
-bind r run-shell "~/.config/tmux/resize-adaptable.sh -l main-vertical -p 60"
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded"
+bind r run-shell "~/.config/tmux/resize-adaptable.sh -l main-vertical -p 60"
+
 
 # -- copy mode -----------------------------------------------------------------
 
 #bind Enter copy-mode # enter copy mode
-bind c copy-mode
+bind Space copy-mode
 
 #run -b 'tmux bind -t vi-copy v begin-selection 2> /dev/null || true'
 #run -b 'tmux bind -T copy-mode-vi v send -X begin-selection 2> /dev/null || true'
@@ -112,17 +119,47 @@ if -b '[ -c /dev/clipboard ]' 'bind y run -b "tmux save-buffer - > /dev/clipboar
 bind p paste-buffer  # paste from the top paste buffer
 bind P choose-buffer # choose which buffer to paste from
 
+# -- color ---------------------------------------------------------------------
+
+# generals
+#set-option -g status-attr dim
+set -g window-style fg=default,bg=default 
+set -g window-active-style fg=default,bg=default
+#set -g window-active-style fg=default,bg=colour235 # colour235 for active pane
+set -g set-titles on
+set -g set-titles-string "#T"
+set-option -g status-style bg=colour235,fg=colour136,default
+set-option -g message-style bg=colour235,fg=colour166
+
+# window title
+set-window-option -g window-status-style fg=colour244,bg=colour234,dim
+set-window-option -g window-status-current-style fg=colour166,bg=default,bright
+
+# pane border
+set-option -g pane-border-style fg=colour235 #base02
+set-option -g pane-active-border-style fg=colour136,bg=colour235
+
+# pane number display
+#set-option -g display-panes-active-colour colour33 #blue
+#set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
+
+
 # -- status bar ----------------------------------------------------------------
 
-set-window-option -g window-status-format ""
-set-window-option -g window-status-current-format ""
+#set-window-option -g window-status-format ""
+#set-window-option -g window-status-current-format ""
+set -g window-status-separator '#[fg=colour244,bg=colour234] '
+set -g window-status-format "#[fg=colour244,bg=colour234] #I"
+set -ga window-status-format " #[fg=colour240]"
+set -ga window-status-format " #[default,bg=colour234]#W "
 
-# set color for status bar
-set-option -g status-bg colour235 #base02
-set-option -g status-fg yellow #yellow
-#set-option -g status-attr dim
-
-
+set -g window-status-current-format "#[fg=colour234,bg=colour31]"
+set -ga window-status-current-format "#[fg=colour117,bg=colour31] #I "
+set -ga window-status-current-format " #[fg=colour231,bold]#W [#P]"
+set -ga window-status-current-format " #[fg=colour31,bg=colour234,nobold]"
 
 # show IP addresses on left side of status bar
 set -g status-left-length 120
@@ -134,20 +171,23 @@ DEFAULT_GW="$(ip route show | grep default | cut -d' ' -f 3)"
 
 UPTIME="$(uptime | awk '{print $3}'|sed 's/,//')"
 
-set -g status-left "#[fg=green][#P]"
-set -ga status-left " #[fg=brightblue]#(curl icanhazip.com)"
-set -ga status-left " #[fg=yellow]#(echo $IP_ADDR)"
-set -ga status-left " #[fg=red]#(echo $VPN0_ADDR)"
-set -ga status-left " #[fg=red]#(echo $VPN1_ADDR)"
-set -ga status-left " #[fg=white]8.8.8.8 (#(ping -c1 8.8.8.8 | grep ttl | cut -f4 -d'='))"
-set -ga status-left " #[fg=white]#(echo $DEFAULT_GW) (#(ping -c1 $DEFAULT_GW | grep ttl | cut -f4 -d'='))"
+set -g status-left "#[fg=colour235,bg=colour252,bold] #S"
+set -ga status-left " #[fg=colour252,bg=colour238,nobold]"
+set -ga status-left " #[fg=colour245,bg=colour238,bold]"
+set -ga status-left "#(~/.config/tmux/ssh-utils.sh _root #{pane_tty} !)"
+set -ga status-left "#(~/.config/tmux/ssh-utils.sh _username #{pane_tty} false #D)"
+set -ga status-left "#(~/.config/tmux/ssh-utils.sh _hostname #{pane_tty} false #h #D)"
+set -ga status-left " #[fg=colour238,bg=colour234,nobold]"
 
 # show user info on right side of status bar
+set -g status-right-length 125
 
-set -g status-right-length 80
-set -g status-right "#[fg=yellow]%d %b %Y"
-set -ga status-right " #[fg=green]%H:%M"
-set -ga status-right ' #[fg=red]#(~/.config/tmux/ssh-utils.sh _username #{pane_tty} false #D)'
-set -ga status-right ' #[fg=red]#(~/.config/tmux/ssh-utils.sh _root #{pane_tty} !)'
-set -ga status-right ' #[fg=blue]#(~/.config/tmux/ssh-utils.sh _hostname #{pane_tty} false #h #D)'
-set -ga status-right " #[fg=white]#(echo $UPTIME)UT"
+set -g status-right "#[fg=brightblue]#(~/.config/tmux/ssh-utils.sh _publicip)"
+set -ga status-right "#[fg=yellow]#(~/.config/tmux/ssh-utils.sh _ip_addr)"
+set -ga status-right "#[fg=red]#(~/.config/tmux/ssh-utils.sh _vpn0_addr)"
+set -ga status-right "#[fg=red]#(~/.config/tmux/ssh-utils.sh _vpn1_addr)"
+set -ga status-right "#[fg=white]#(~/.config/tmux/ssh-utils.sh _ping_googledns)"
+set -ga status-right "#[fg=white]#(~/.config/tmux/ssh-utils.sh _ping_default_gateway)"
+set -ga status-right "#[fg=yellow] %d %b %Y"
+set -ga status-right "#[fg=green] %H:%M"
+set -ga status-right "#[fg=white]#(~/.config/tmux/ssh-utils.sh _uptime)"
