feat: adding alacritty keybindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,8 +80,24 @@ bind o run-shell "explorer.exe `wslpath -w #{pane_current_path}` || true"
 bind x swap-pane -t :.1 \; select-pane -t :.1
 bind e kill-pane \; select-layout main-vertical
 bind v split-window -v \; select-layout main-vertical \; swap-pane -t :.1 \; select-pane -t :.1
-bind R source-file ~/.tmux.conf \; display-message "Config reloaded"
 bind r run-shell "~/.config/tmux/resize-adaptable.sh -l main-vertical -p 60"
+
+#
+# (Mask-Shift-c): Close focused pane
+bind-key -n M-C kill-pane
+
+#
+# (Mask-Shift-q): "Quit xmonad", or quit our tmux session
+bind-key -n M-Q kill-session
+
+#
+# (Mask-q): "Restart xmonad", or reload our tmux bindings
+# NOTE: Warning given about "unable to connect to session" on startup unless
+#       placed within a run-shell command
+#bind R source-file ~/.tmux.conf \; display-message "Config reloaded"
+bind-key -n M-q run-shell "\
+  tmux source-file ~/.tmux.conf ; \
+  tmux display-message 'TMUX Configuration reloaded'"
 
 
 # -- copy mode -----------------------------------------------------------------
