--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -12,8 +12,8 @@ env:
 
 window:
   dimensions:
-    columns: 209
-    lines: 56
+    columns: 235
+    lines: 58
   position:
     x: 10
     y: 10
@@ -44,7 +44,7 @@ font:
   bold_italic:
     family: Fira Code
     style: Bold Italic
-  size: 11.0
+  size: 10.0
   offset:
     x: 0
     y: 0
@@ -373,22 +373,25 @@ mouse_bindings:
   #- { key: B,      mods: Command,            action: SearchBackward   }
 
 key_bindings:
-  - { key: V,      mods: Control,       action: Paste    } # terminal up
-  - { key: J,      mods: Control,       chars: "\x02\x6A"} # terminal up
-  - { key: K,      mods: Control,       chars: "\x02\x6F"} # terminal down
-  - { key: H,      mods: Alt,           chars: "\x02\x48"} # resize left
-  - { key: J,      mods: Alt,           chars: "\x02\x4A"} # resize down
-  - { key: K,      mods: Alt,           chars: "\x02\x4B"} # resize up
-  - { key: L,      mods: Alt,           chars: "\x02\x4C"} # resize right
-  - { key: M,      mods: Control,       chars: "\x02\x7A"} # maximize terminal
-  - { key: X,      mods: Alt,           chars: "\x02\x6B"} # kill terminal
-  - { key: R,      mods: Alt,           chars: "\x02\x72"} # reload divisions
-  - { key: R,      mods: Control|Shift, chars: "\x02\x52"} # apply tmux config
-  - { key: Return, mods: Control|Shift, chars: "\x02\x76"} # create new primary terminal
-  - { key: Return, mods: Control,       chars: "\x02\x78"} # set terminal to primary
-  - { key: Space,  mods: Control,       chars: "\x02\x63"} # mode: copy paste
-  - { key: B,      mods: Alt,           chars: "\x02\x62"} # pane background to black
-  - { key: B,      mods: Alt|Shift,     chars: "\x02\x42"} # pane background to default
+  - { key: V,      mods: Control,       action: Paste    } # paste
+  - { key: J,      mods: Control,       chars: "\x14\x6A"} # terminal up
+  - { key: K,      mods: Control,       chars: "\x14\x6B"} # terminal down
+  - { key: O,      mods: Control,       chars: "\x14\x6F"} # open folder in gui
+  
+  - { key: H,      mods: Alt,           chars: "\x14\x48"} # resize left
+  - { key: J,      mods: Alt,           chars: "\x14\x4A"} # resize down
+  - { key: K,      mods: Alt,           chars: "\x14\x4B"} # resize up
+  - { key: L,      mods: Alt,           chars: "\x14\x4C"} # resize right
+
+  - { key: M,      mods: Control,       chars: "\x14\x7A"} # maximize terminal
+  - { key: X,      mods: Alt,           chars: "\x14\x6B"} # kill terminal
+  - { key: R,      mods: Alt,           chars: "\x14\x72"} # reload divisions
+  #- { key: R,      mods: Control|Shift, chars: "\x14\x52"} # apply tmux config
+  - { key: Return, mods: Control|Shift, chars: "\x14\x76"} # create new primary terminal
+  - { key: Return, mods: Control,       chars: "\x14\x78"} # set terminal to primary
+  - { key: Space,  mods: Control,       chars: "\x14\x20"} # mode: copy paste
+  - { key: B,      mods: Alt,           chars: "\x14\x62"} # pane background to black
+  - { key: B,      mods: Alt|Shift,     chars: "\x14\x42"} # pane background to default
   
 debug:
   render_timer: false
