feat: aliases and exports

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,7 @@ setw -g mode-keys vi
 
 #set -g default-terminal "alacritty"
 set -g default-terminal "xterm-256color"
+#set -g default-terminal "screen-256color"
 set -g assume-paste-time 0
 set -g repeat-time 0
 set -g history-limit 10000		# boost history
@@ -43,6 +44,11 @@ bind _ split-window -h # split vertically
 
 unbind C-b
 set-option -g prefix C-t
+
+# Allow Home and Escape keys work
+# https://stackoverflow.com/a/55616731
+bind-key -n Home send Escape "OH"
+bind-key -n End send Escape "OF"
 
 # sessions
 bind C new-session
